# derive_aktor

./: .gitignore  Cargo.toml  README.md  ex
src/: lib.rs
testderive/: Cargo.toml
testderive/src/: main.rs
