[package]
name = "derive-aktor"
version = "0.1.3"
authors = ["insanitybit <insanitybit@gmail.com>"]
edition = "2018"
description = "Create actors in rust with a derive macro"
license = "MIT"

[lib]
proc-macro = true

[dependencies]

quote = "1.0"
futures = "0.3"
async-trait = "0.1"
aktors = "0.2.5"

uuid = {version="0.8.1", features=["v4"]}

[dependencies.tokio]
version = "0.2"
features = ["full"]

[dependencies.syn]
version = "1.0.*"
features = ['full']
