[package]
name = "derive-aktor"
version = "0.2.0"
authors = ["insanitybit <insanitybit@gmail.com>"]
edition = "2018"
description = "Create actors in rust with a derive macro"
license = "MIT"
readme = "README.md"

[lib]
proc-macro = true

[dependencies]

quote = "1.0"
futures = "0.3"
async-trait = "0.1"
aktors = "0"

uuid = { version="0.8", features=["v4"] }
tracing = "0"

[dependencies.tokio]
version = "0.2"
features = ["full"]

[dependencies.syn]
version = "1"
features = ['full']
